<resources>

    <string name="ad_id1">ca-app-pub-1774878275661991~7071836972</string>
    <string name="ad_id2">ca-app-pub-1563785045157371~8952735172</string>

    <string name="ad_ban1">ca-app-pub-1774878275661991/8209782537</string>
    <string name="ad_ban2">ca-app-pub-1563785045157371/5532774039</string>

    <string name="ad_inter1">ca-app-pub-1774878275661991/6030218041</string>
    <string name="ad_inter2">ca-app-pub-1563785045157371/5526950894</string>

    <string name="app_name">Instagram analytics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="err_connection_internet">Нет подключения к интернету....</string>
    <string name="suc_connection_internet">Соединение восстановлено</string>
    <string name="follow">Подписки</string>
    <string name="followers_by">Подписчики</string>
    <string name="post">Публикации</string>
    <string name="photo">Фото</string>
    <string name="slider">Слайдер</string>
    <string name="video">Видео</string>
    <string name="likes">Лайки</string>
    <string name="comments">Комменты</string>
    <string name="views">Просмотры</string>
    <string name="activity">Активность</string>
    <string name="top_likers">Топ лайкеров</string>
    <string name="top_comments">Топ комментаторов</string>
    <string name="please_wait">Пожалуйста, подождите.</string>
    <string name="load_data">Идет загрузка данных...</string>
    <string name="all">ВСЕ</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отмена</string>
    <string name="current_month">За последний (текущий) месяц</string>
    <string name="all_months">Весь период</string>
    <string name="select_months">Выбранный период</string>
    <string name="count_posts">Количество публикаций</string>
    <string name="posts_fragment">Публикации</string>
    <string name="period_1">С периода</string>
    <string name="period_2">По период</string>
    <string name="select_date">Выбрать дату</string>
    <string name="inpunt_count_posts_hint">Введито кол-во постов...</string>
    <string name="empty_list">Ничего не найдено...</string>
    <string name="follows">Подписки</string>
    <string name="unfollows">Отписки</string>
    <string name="graph_follows">График подписок</string>
    <string name="graph_unfollows">График отписок</string>
    <string name="who_follows">Кто подписался</string>
    <string name="who_unfollows">Кто отписался</string>
    <string name="audience_fragment">Аудитория</string>
    <string name="update_data">Обновить данные?</string>
    <string name="yes">ДА</string>
    <string name="audience_no_follow_or_unfollow">На данный момент от Вас никто не отписался/подписался, как только это произойдет - Вы сразу увидите!</string>
    <string name="fragment_hashtags">Хэштеги</string>
    <string name="hashtags_popular">Самые популярные</string>
    <string name="hashtags_max_count_like">С наибольшим количеством лайков</string>
    <string name="hashtags_max_count_comments">С наибольшим количеством комментариев</string>
    <string name="empty_text_hashtags">Хэштеги не найдены....</string>
    <string name="find_to_posts">Найдено в </string>
    <string name="posts_1"> записях</string>
    <string name="fragment_stalkers">Сталкеры</string>
    <string name="empty_stalkers">На вашем аккаунте не найдены пользователи, который лайкают и комментируют записи, не подписавшись на Вас...</string>
    <string name="stalkers_find_comments_h1">Оставлено комментариев: </string>
    <string name="stalkers_find_like_h1">Поставлено лайков: </string>
    <string name="fragment_feed">Лента</string>
    <string name="date">Дата</string>
    <string name="er">ER</string>
    <string name="feed_empty_list">Публикаций не найдено...</string>
    <string name="fragment_profile">Профиль</string>
    <string name="fragment_hashtags_promotion">Хэштеги для продвижения</string>
    <string name="exit">Выход</string>
    <string name="your_hashtags">Ваши хэштеги</string>
    <string name="favotite">Избранное</string>
    <string name="title_activity_list_hashtags"></string>
    <string name="title_dialog_add">Добавьте свою категорию хэштегов</string>
    <string name="dialog_add_hint1">Введите название категории</string>
    <string name="dialog_add_hint2">Введите хэштеги(через пробел)</string>
    <string name="empty_add_cat">Категория не может быть пустой...</string>
    <string name="empty_add_hashtags">Поле с хэштегами не может быть пустым...</string>
    <string name="sign_in">Войти</string>
    <string name="empty_login">Логин не может быть пустым...</string>
    <string name="empty_password">Пароль не может быть пустым...</string>
    <string name="error_login_or_password">Неверный логин или пароль...</string>
    <string name="last_update_ui">Последнее обновление данных: \n</string>
    <string name="text_share">Узнай статистику своего аккаунта Instagram, получай больше лайков и подписчиков! https://play.google.com/store/apps/details?id=by.anikamobiappstudio.instanalytics</string>

</resources>
