<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:visibility="visible">

    <include layout="@layout/progress"></include>

    <include
        android:id="@+id/rel_header"
        layout="@layout/custom_bar"></include>

    <RelativeLayout
        android:id="@+id/rel_search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/rel_header"
        android:layout_marginTop="-8dp"
        android:background="@color/colorAccent"
        android:visibility="gone">

        <SearchView
            android:id="@+id/search_hashtags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/cardview_light_background" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rel_search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/empty_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/empty_text_hashtags"
                android:textColor="@color/black"
                android:visibility="gone" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:visibility="visible"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/ad_ban1" />

            <LinearLayout
                android:id="@+id/lin_all_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/hashtags_popular"
                    android:textColor="@color/accent_text" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rec_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/hashtags_max_count_like"
                    android:textColor="@color/accent_text" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rec_count_likes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/hashtags_max_count_comments"
                    android:textColor="@color/accent_text" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rec_count_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>