<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_launcher_background" />

    <RelativeLayout
        android:id="@+id/rel_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/menu_img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <TextView
            android:id="@+id/menu_tv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/menu_img_profile"
            android:text="@string/fragment_profile"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/menu_img_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_assignment_black_24dp" />

        <TextView
            android:id="@+id/menu_tv_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/menu_img_feed"
            android:text="@string/fragment_feed"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/menu_img_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_content_paste_black_24dp" />

        <TextView
            android:id="@+id/menu_tv_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/menu_img_posts"
            android:text="@string/post"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_audience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/menu_img_audience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_group_black_24dp" />

        <TextView
            android:id="@+id/menu_tv_audience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/menu_img_audience"
            android:text="@string/audience_fragment"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_stalkers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/menu_img_stalkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_group_black_24dp" />

        <TextView
            android:id="@+id/menu_tv_stalkers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/menu_img_stalkers"
            android:text="@string/fragment_stalkers"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_hashtags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/menu_img_hashtags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_group_black_24dp" />

        <TextView
            android:id="@+id/menu_tv_hashtags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/menu_img_hashtags"
            android:text="@string/fragment_hashtags"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>