<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <include layout="@layout/progress"></include>

    <include
        android:id="@+id/rel_header"
        layout="@layout/custom_bar"></include>

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rel_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <include layout="@layout/audience_h1"></include>

            <TextView
                android:id="@+id/tv_empty_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:gravity="center"
                android:text="@string/audience_no_follow_or_unfollow"
                android:textColor="@color/black"
                android:visibility="gone" />

            <android.support.v7.widget.CardView
                android:id="@+id/card_graph_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/audience_tv_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/graph_follows"
                        android:textColor="@color/black" />

                    <HorizontalScrollView
                        android:id="@+id/horizontalScrollView_content_store_likes"
                        android:layout_width="fill_parent"
                        android:layout_height="200dp"
                        android:layout_alignParentRight="true"
                        android:layout_margin="8dp">

                        <view
                            android:id="@+id/line_view_follows"
                            class="im.dacer.androidcharts.LineView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp" />
                    </HorizontalScrollView>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_list_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/audience_tv_card_people"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/who_follows"
                        android:textColor="@color/black" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/audience_recycler_people"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"></android.support.v7.widget.RecyclerView>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>